@@ -1,0 +1,15 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/rack-1.0.1.ebuild,v 1.1 2009/10/23 15:10:42 graaff Exp $
+
+inherit gems
+
+DESCRIPTION="A modular Ruby webserver interface"
+HOMEPAGE="http://rubyforge.org/projects/rack"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux ~x86-solaris"
+IUSE=""
+
+USE_RUBY="ruby18 ruby19"
